--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -25,7 +25,7 @@
             TOTAL:
           </th>
           <th>
-            <%= cart_subtotal_cents / 100.0 %>
+            $S<%= cart_subtotal_cents / 100.00 %>
           </th>
         </tr>
       </tfoot>
