--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,14 @@
 <section class="cart-show">
+  <% if enhanced_cart.length() == 0 %>
 
+  <header class="page-header">
+    <h1>Your cart is empty. Browse more products on our homepage!</h1>
+  </header>
+  <button>
+    <%= link_to 'Home', :root %>
+  </button>
+
+  <% else %>
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
@@ -48,5 +57,5 @@
       <% end %>
     </div>
   </div>
-
+  <% end %>
 </section>
