--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,7 +4,7 @@
   <header class="page-header">
     <h1>Your cart is empty. Browse more products on our homepage!</h1>
   </header>
-  <button>
+  <button class="alert">
     <%= link_to 'Home', :root %>
   </button>
 
