--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,7 +2,35 @@
 
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
+    <h4>Email <%= @order.email %></h4>
   </header>
+
+  <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orderDetails.each do |item| %>
+          <%= render 'item', product: item %>
+        <% end %>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="3">
+            TOTAL:
+          </th>
+          <th>
+            $S<%= cart_subtotal_cents / 100.00 %>
+          </th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
