made routes, pages for categories

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -11,7 +11,7 @@
     </h3></li>
 
     <li><h3>
-      <%= link_to [:admin, :categories] do %>
+      <%= link_to %i[admin categories] do %>
         Total number of categories: <%= @categories_total %>
       <% end %>
     </h3></li>
