--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -27,11 +27,16 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <%= link_to [:admin, :root] do %>
-            <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <span class="text-danger"><%= fa_icon 'lock', text: 'My Account' %></span>
             <span class="caret"></span>
-          <% end %>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'Signup', signup_url %></li>
+            <li><%= link_to 'Login', login_url %></li>
+            <li><%= link_to 'Admin', [:admin, :root] %></li>
+          </ul>
         </li>
         <li>
           <%= link_to cart_path do %>
