--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -26,18 +26,31 @@
           </ul>
         </li>
       </ul>
+      
       <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <span class="text-danger"><%= fa_icon 'unlock', text: 'Hi ' %><%= current_user.name %></span>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Logout", '/logout' %></li>
+          </ul>
+        </li>
+        <% else %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span class="text-danger"><%= fa_icon 'lock', text: 'My Account' %></span>
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to 'Signup', signup_url %></li>
+            <li><%= link_to 'Register', signup_url %></li>
             <li><%= link_to 'Login', login_url %></li>
             <li><%= link_to 'Admin', [:admin, :root] %></li>
           </ul>
         </li>
+        <% end %>
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
